fix: align text to the left in social container for better readability

--- a/css/style.css
+++ b/css/style.css
@@ -665,6 +665,7 @@ a:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  text-align: left;
 }
 
 .info_social .social_container a {
